# nand2tetris-rs

./: .gitignore  Cargo.toml  index.md
.github/workflows/: rust.yml
_includes/: mathjax.html
_layouts/: default.html
assembler/: Cargo.toml
assembler/src/: instruction.rs  main.rs  parser.rs  symbol.rs  token.rs
computer/: Cargo.toml
computer/shader/: Makefile  main.frag  main.frag.spv  main.vert  main.vert.spv
computer/src/: computer.rs  cpu.rs  lib.rs  main.rs  memory.rs  rom.rs  signal.rs
computer/src/chip/: arith.rs  basic.rs  mem.rs
computer/src/keyboard/: mod.rs  winit.rs
computer/src/screen/: mod.rs  wgpu.rs
debugger/: Cargo.toml
debugger/src/: main.rs
project/: 1.md  2.md  3.md  5.md  6.md
src/: chip.rs  computer.rs  main.rs  memory.rs
src/chip/: arith.rs  basic.rs  mem.rs  mod.rs
