[package]
name = "assembler"
version = "0.1.0"
authors = ["kbone <kbonehobby@gmail.com>"]
description = "Assemble into nand2tetris machine language"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.4.2"
thiserror = "1.0.22"
